css changes and alignment fixed

--- a/public/stylesheets/learn.css
+++ b/public/stylesheets/learn.css
@@ -19,8 +19,8 @@
   position: absolute;
   top: 50%;
   width: auto;
-  margin-top: -22px;
-  padding: 16px;
+  margin-top: -20px;
+  /* padding: 16px; */
   color: white;
   font-weight: bold;
   font-size: 18px;
